# payload-dumper-rust

./: .clang-format  .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  build.rs  changelog.md  meson.build  rustfmt.toml  termux-build.sh  updateJson
.github/workflows/: android.yml  build.yml  darwin.yml  musl.yml  win-mingw-aarch64.yml  windows.yml
include/: payload_dumper.h  payload_dumper.hpp
lib/: README.md
lib/android/arm64-v8a/: liblzma.pc
lib/android/armv7/: liblzma.pc
lib/android/x86/: liblzma.pc
lib/android/x86_64/: liblzma.pc
lib/musl/aarch64/: liblzma.la
lib/musl/armv7/: liblzma.la
lib/win/x86/: liblzma.pc
module/: customize.sh  module.prop
module/uncommon/: payload-dumper-x86  payload_dumper-arm64-v8a  payload_dumper-armeabi-v7a  payload_dumper-x86  payload_dumper-x86_64
proto/: update_metadata.pb-c.c  update_metadata.pb-c.h
scripts/: install.ps1  install.sh  termux-build.sh  termux-install.sh
src/: args.rs  capi.rs  constants.rs  http.rs  jni.rs  lib.rs  local_reader.rs  main.rs  metadata.rs  payload_dumper.c  payload_dumper.rs  prefetch.rs  structs.rs  utils.rs  verify.rs
src/cli/: entry.rs  mod.rs
src/cli/args/: args_def.rs  mod.rs
src/cli/commands/: list.rs  metadata_saver.rs  mod.rs
src/cli/payload/: extractor.rs  file_detector.rs  mod.rs  partition_filter.rs  payload_loader.rs  prefetch_extractor.rs
src/cli/ui/: cli_reporter.rs  mod.rs  ui_print.rs
src/cli/verification/: mod.rs  validator.rs  verify.rs
src/extractor/: local.rs  mod.rs  remote.rs
src/http/: http_reader.c  http_reader.h
src/module/: args.rs  entry.rs  http.rs  metadata.rs  mod.rs  patch.rs  payload_dumper.rs  remote_zip.rs  structs.rs  utils.rs  verify.rs  zip.rs
src/module/zip/: advanced_reader.rs  local_zip.rs  mod.rs  remote_zip.rs  zip_core.rs
src/payload/: diff.rs  mod.rs  payload_dumper.rs  payload_parser.rs
src/proto/: update_metadata.rs
src/readers/: local_reader.rs  local_zip_reader.rs  mod.rs  remote_bin_reader.rs  remote_zip_reader.rs
src/structs/: manual.rs  mod.rs  proto.rs
src/zip/: core_parser.rs  local_zip_io.rs  mod.rs  zip.rs  zip_io.rs  zip_parser.c  zip_parser.h
subprojects/: protobuf-c.wrap
