[package]
name        = "payload_dumper"
version     = "0.8.2"
edition     = "2024"
authors     = ["rhythmcache"]
description = "A fast and efficient Android OTA payload dumper library and CLI"
repository  = "https://github.com/rhythmcache/payload-dumper-rust"
readme      = "README.md"
license     = "Apache-2.0"
homepage    = "https://github.com/rhythmcache/payload-dumper-rust"
keywords    = ["dumper", "android", "ota", "extractor", "payload"]
categories  = ["command-line-utilities", "filesystem", "compression"]

include = [
    "src/**",
    "include/**",
    "proto/update_metadata.proto",
    "LICENSE",
    "README.md",
    "Cargo.toml",
    "build.rs",
]

[lib]
name = "payload_dumper"
path = "src/lib.rs"

[[bin]]
name = "payload_dumper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
indicatif = "0.18.4"
prost = "0.14.3"
num_cpus = "1.17.0"
hex = "0.4.3"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "time",
    "full",
] }
futures = "0.3.32"
async-compression = { version = "0.4.41", features = [
    "zstd",
    "xz",
    "bzip2",
    "tokio",
] }
async-trait = "0.1.89"
tokio-util = { version = "0.7.18", features = ["io"], optional = true }
url = "2.5.8"
hickory-resolver = { version = "0.25.2", optional = true }
tempfile = { version = "3.27.0", optional = true }
ahash = "0.8.12"
hickory-proto = { version = "0.25.2", optional = true }
once_cell = "1.21.4"
futures-util = "0.3.32"
lz4_flex = { version = "0.13", default-features = false, optional = true }
bsdiff-android = { version = "0.0.2", optional = true }
reqwest = { version = "0.13", features = [
    "rustls",
    "stream",
    "http2",
    "gzip",
], default-features = false, optional = true }
digest = "0.11.2"
sha2 = { version = "0.10.9", features = ["asm"] }
[build-dependencies]
chrono      = "0.4.44"
prost-build = "0.14.3"

[features]
default = ["local_zip", "remote_zip", "prefetch", "diff_ota"]
local_zip = []
remote_zip = ["local_zip", "dep:tokio-util"]
hickory_dns = [
    "remote_zip",
    "dep:hickory-resolver",
    "dep:hickory-proto",
    "reqwest?/hickory-dns",
]
diff_ota = ["dep:bsdiff-android", "dep:lz4_flex"]
prefetch = ["remote_zip", "dep:tempfile"]
reqwest = ["dep:reqwest"]

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true
debug           = false
incremental     = false
overflow-checks = false
