[package]
name        = "payload_dumper"
version     = "0.8.3"
edition     = "2024"
authors     = ["rhythmcache"]
description = "A fast and efficient Android OTA payload dumper library and CLI"
repository  = "https://github.com/rhythmcache/payload-dumper-rust"
readme      = "README.md"
license     = "Apache-2.0"
homepage    = "https://github.com/rhythmcache/payload-dumper-rust"
keywords    = ["dumper", "android", "ota", "extractor", "payload"]
categories  = ["command-line-utilities", "filesystem", "compression"]

include = [
    "src/**",
    "include/**",
    "proto/update_metadata.proto",
    "LICENSE",
    "README.md",
    "Cargo.toml",
    "build.rs",
]

[lib]
name = "payload_dumper"
path = "src/lib.rs"

[[bin]]
name = "payload_dumper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
indicatif = "0.18.6"
prost = "0.14.4"
num_cpus = "1.17.0"
hex = "0.4.3"
clap = { version = "4.6.3", features = ["derive"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "time",
    "full",
] }
futures = "0.3.33"
async-compression = { version = "0.4.42", features = [
    "zstd",
    "xz",
    "bzip2",
    "tokio",
] }
async-trait = "0.1.91"
tokio-util = { version = "0.7.18", features = ["io"], optional = true }
hickory-resolver = { version = "0.25.2", optional = true }
tempfile = { version = "3.27.0", optional = true }
ahash = "0.8.12"
hickory-proto = { version = "0.25.2", optional = true }
once_cell = "1.21.4"
futures-util = "0.3.33"
lz4_flex = { version = "0.13", default-features = false, optional = true }
bsdiff-android = { version = "0.0.2", optional = true }
puffdiff = { version = "0.1", optional = true }
reqwest = { version = "0.12.28", features = [
    "rustls-tls-webpki-roots",
    "stream",
    "http2",
], default-features = false, optional = true }
digest = "0.11.3"
sha2 = "0.10.9"
lz4diff = { version = "0.1.0", optional = true }

[build-dependencies]
chrono      = "0.4.45"
prost-build = "0.14.4"

[features]
default = ["local_zip", "remote_zip", "prefetch", "diff_ota"]
local_zip = []
remote_zip = ["local_zip", "dep:tokio-util", "dep:reqwest"]
hickory_dns = [
    "remote_zip",
    "dep:hickory-resolver",
    "dep:hickory-proto",
    "reqwest?/hickory-dns",
]
diff_ota = ["dep:bsdiff-android", "dep:puffdiff", "dep:lz4diff"]
prefetch = ["remote_zip", "dep:tempfile"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = true
debug         = false
